Robot Fly behaviour

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -66,7 +66,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=200,Y=165)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,6 +100,7 @@ LastExecutedLaunchName=DESKTOP-6E2CQV9
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=200,Y=165)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -149,7 +150,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -937,10 +938,10 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
-PaperFlipbookComponent.MaterialParameters=False
-PaperFlipbookComponent.HLOD=False
-PaperFlipbookComponent.Mobile=False
-PaperFlipbookComponent.AssetUserData=False
+PaperFlipbookComponent.MaterialParameters=True
+PaperFlipbookComponent.HLOD=True
+PaperFlipbookComponent.Mobile=True
+PaperFlipbookComponent.AssetUserData=True
 ProceduralBoxToolProperties.ShapeSettings=True
 ProceduralBoxToolProperties.AssetSettings=True
 ProceduralBoxToolProperties.Positioning=True
@@ -1763,13 +1764,49 @@ RobotFly_C.Collision=True
 RobotFly_C.Actor=True
 RobotFly_C.Input=True
 RobotFly_C.TransformCommon=True
+ThirdPersonGameMode_C.Tick=True
+ThirdPersonGameMode_C.Classes=True
+ThirdPersonGameMode_C.Game=True
+ThirdPersonGameMode_C.GameMode=True
+ThirdPersonGameMode_C.Cooking=False
+ThirdPersonGameMode_C.LOD=False
+RobotFly_C.Default=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=False
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+ThirdPersonCharacter_C.LOD=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+FlyProjectile_C.Tick=True
+FlyProjectile_C.Replication=True
+FlyProjectile_C.Rendering=True
+FlyProjectile_C.Collision=True
+FlyProjectile_C.Actor=True
+FlyProjectile_C.Input=True
+FlyProjectile_C.Default=True
+FlyProjectile_C.LOD=True
+FlyProjectile_C.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Sprites/SourceTextures/fly.fly
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/RobotFly.RobotFly
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/FlyProjectile.FlyProjectile
 
 [RootWindow]
-ScreenPosition=X=190.400 Y=156.000
-WindowSize=X=1288.800 Y=728.800
+ScreenPosition=X=190.000 Y=156.000
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1786,7 +1823,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -2655,29 +2692,29 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/RobotFly
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem2=/Game/Water
-MRUItem3=/Game/Ground
-MRUItem4=/Game/Sprites/FoliageActors/BarrierTree_Foliage
-MRUItem5=/Game/Sprites/FoliageActors/BarrierTree
-MRUItem6=/Game/TreeLeaves
-MRUItem7=/Game/TreeTrunk
-MRUItem8=/Game/Sprites/FoliageActors/Vine1_Foliage
-MRUItem9=/Game/Sprites/FoliageActors/Vine_Blueprint
-MRUItem10=/Game/Sprites/FoliageActors/Vine1_Blueprint
-MRUItem11=/Game/Sprites/FoliageActors/Vine9_Foliage
-MRUItem12=/Game/Sprites/FoliageActors/Vine8_Foliage
-MRUItem13=/Game/Sprites/FoliageActors/Vine7_Foliage
-MRUItem14=/Game/Sprites/FoliageActors/Vine6_Foliage
-MRUItem15=/Game/Sprites/FoliageActors/Vine5_Foliage
-MRUItem16=/Game/Sprites/FoliageActors/Vine4_Foliage
-MRUItem17=/Game/Sprites/FoliageActors/Vine3_Foliage
-MRUItem18=/Game/Sprites/FoliageActors/Vine2_Foliage
-MRUItem19=/Game/Sprites/FoliageActors/Vine1_Foliage_2
+MRUItem0=/Game/ThirdPersonBP/Blueprints/FlyProjectile
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Sprites/SourceTextures/fly
+MRUItem3=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem4=/Game/Sprites/fly_Flipbook
+MRUItem5=/Game/Sprites/fly_0
+MRUItem6=/Game/Maps/Swamp
+MRUItem7=/Game/Sprites/fly_1
+MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem9=/Game/UI/MainMenu
+MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem12=/Game/Water
+MRUItem13=/Game/Ground
+MRUItem14=/Game/Sprites/FoliageActors/BarrierTree_Foliage
+MRUItem15=/Game/Sprites/FoliageActors/BarrierTree
+MRUItem16=/Game/TreeLeaves
+MRUItem17=/Game/TreeTrunk
+MRUItem18=/Game/Sprites/FoliageActors/Vine1_Foliage
+MRUItem19=/Game/Sprites/FoliageActors/Vine_Blueprint
 
 [AssetEditorToolkitTabLocation]
-/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/Flipbooks/Art/mouse_Flipbook.mouse_Flipbook=1
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=1
 None=======
@@ -2788,6 +2825,10 @@ None=======
 /Game/Sprites/FoliageActors/BarrierTree.BarrierTree=1
 /Game/Sprites/FoliageActors/BarrierTree_Foliage.BarrierTree_Foliage=1
 /Game/ThirdPersonBP/Blueprints/RobotFly.RobotFly=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=0
+/Game/Sprites/fly_1.fly_1=0
+/Game/Sprites/fly_0.fly_0=0
+/Game/Sprites/fly_Flipbook.fly_Flipbook=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2868,7 +2909,7 @@ CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
-ActorComponent="\"Object.RelativeLocation\" "
+ActorComponent=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Brush\" "
@@ -2879,21 +2920,21 @@ PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.N
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[12]\" \"Object.Bindings.ActionMappings.ActionMappings[13]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[17]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" \"Object.Bindings.AxisMappings.AxisMappings[11]\" \"Object.Bindings.AxisMappings.AxisMappings[12]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" \"Object.Bindings.AxisMappings.AxisMappings[14]\" \"Object.Bindings.AxisMappings.AxisMappings[15]\" \"Object.Bindings.AxisMappings.AxisMappings[16]\" \"Object.Bindings.AxisMappings.AxisMappings[17]\" \"Object.Bindings.AxisMappings.AxisMappings[18]\" \"Object.Bindings.AxisMappings.AxisMappings[19]\" \"Object.Bindings.AxisMappings.AxisMappings[20]\" \"Object.Bindings.AxisMappings.AxisMappings[21]\" \"Object.Bindings.AxisMappings.AxisMappings[22]\" \"Object.Bindings.AxisMappings.AxisMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[24]\" \"Object.Bindings.AxisMappings.AxisMappings[25]\" \"Object.Bindings.AxisMappings.AxisMappings[26]\" \"Object.Bindings.AxisMappings.AxisMappings[27]\" \"Object.Bindings.AxisMappings.AxisMappings[28]\" \"Object.Bindings.AxisMappings.AxisMappings[29]\" \"Object.Bindings.AxisMappings.AxisMappings[30]\" \"Object.Bindings.AxisMappings.AxisMappings[31]\" \"Object.Console.ConsoleKeys\" "
 Image="\"Object.Appearance.Brush\" "
 PaperSprite="\"Object.Sprite.CustomPivotPoint\" \"Object.Rendering.RenderGeometry\" "
-PaperSpriteActor=
+PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperGroupedSpriteActor=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
-ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ThirdPersonCharacter_C="\"Object.Default.spawnLocation\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Character="\"Object.Default.spawnLocation\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Pawn="\"Object.Default.spawnLocation\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 Crane_C=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
-PaperSpriteComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent="\"Object.RelativeLocation\" "
+PaperSpriteComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
+SceneComponent=
 grass_clump_2_Sprite_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush4_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush2_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2942,6 +2983,12 @@ Vine8_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance
 Vine9_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 RobotFly_C=
+CapsuleComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
+PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[1]\" "
+PaperFlipbookComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+FlyProjectile_C=
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2950,6 +2997,7 @@ bShowGrid=False
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=True
+ChangeVariableType_Warning=False
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=False
@@ -2962,6 +3010,7 @@ Brush.BrushSettings=True
 WorldSettings.World=True
 StaticMeshActor.StaticMesh=True
 PaperSprite.Sprite=False
+ThirdPersonCharacter_C.Actor=True
 
 [MaterialEditor]
 PrimType=1
@@ -3187,21 +3236,24 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Collision.Collision,
 ModelingToolsEditorModeSettings=InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 Spawnpoint_C=ThirdPersonCharacter_C.Rendering.LOD,
-Spawnpoint_Start_C=
+Spawnpoint_Start_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 CapsuleComponent=
-SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
+SceneComponent=
 BrushComponent=
 Actor=ThirdPersonCharacter_C.Rendering.LOD,
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Rendering.LOD,
 Brush=ThirdPersonCharacter_C.Rendering.LOD,
 Vine_Blueprint_C=ThirdPersonCharacter_C.Rendering.LOD,
-Landscape=ThirdPersonCharacter_C.Rendering.LOD,
+Landscape=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 PostProcessVolume=ThirdPersonCharacter_C.Rendering.LOD,
 BlockingVolume=ThirdPersonCharacter_C.Rendering.LOD,
 BarrierTree_C=ThirdPersonCharacter_C.Rendering.LOD,
 RobotFly_C=
 PropertyWrapper=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
+BillboardComponent=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
+FlyProjectile_C=
+PaperFlipbookComponent=PaperFlipbookComponent.Physics.ConstraintsGroup,PaperFlipbookComponent.Rendering.TextureStreaming,PaperFlipbookComponent.Rendering.LOD,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3263,7 +3315,7 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
