--- a/A_Mouse_Tale/Config/DefaultEngine.ini
+++ b/A_Mouse_Tale/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=A_Mouse_Tale
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/Swamp.Swamp
+GameDefaultMap=/Game/Maps/Swamp.Swamp
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
