Crane beak hitbox and Water Death Zone

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,10 +130,10 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.206933
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.793069
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
@@ -1982,13 +1982,20 @@ treeline_bush1_Blueprint_C.Variable=True
 treeline_bush2_Blueprint_C.ComponentTick=True
 treeline_bush2_Blueprint_C.ComponentReplication=True
 treeline_bush2_Blueprint_C.Variable=True
+WaterDeathZone_C.Tick=True
+WaterDeathZone_C.Replication=True
+WaterDeathZone_C.Rendering=True
+WaterDeathZone_C.Collision=True
+WaterDeathZone_C.Actor=True
+WaterDeathZone_C.Input=True
+WaterDeathZone_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=190.000 Y=156.000
-WindowSize=X=1273.000 Y=713.000
+ScreenPosition=X=189.600 Y=156.000
+WindowSize=X=1274.400 Y=714.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2005,7 +2012,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -2874,26 +2881,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sprites/treeline_bush1
-MRUItem1=/Game/Sprites/bridge_rope_frayed
-MRUItem2=/Game/Sprites/SourceTextures/bridge_rope_frayed
-MRUItem3=/Game/Sprites/bridge_rope
-MRUItem4=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
-MRUItem5=/Game/Sprites/AbilityUpgrades/ice-upgrade
-MRUItem6=/Game/Sprites/SourceTextures/ice-upgrade_1
-MRUItem7=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
-MRUItem8=/Game/ThirdPersonBP/Blueprints/FlyProjectile
-MRUItem9=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
-MRUItem10=/Game/Sprites/AbilityUpgrades/sky-upgrade
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem12=/Game/Sprites/FoliageActors/treeline_bush2_Blueprint
-MRUItem13=/Game/Sprites/FoliageActors/treeline_bush1_Blueprint
-MRUItem14=/Game/Sprites/FoliageActors/rock4_Blueprint
-MRUItem15=/Game/Sprites/FoliageActors/rock3_Blueprint
-MRUItem16=/Game/Sprites/FoliageActors/rock2_Blueprint
-MRUItem17=/Game/Sprites/FoliageActors/rock1_Blueprint
-MRUItem18=/Game/Sprites/FoliageActors/leafpile2_Blueprint
-MRUItem19=/Game/Sprites/FoliageActors/leafpile1_Blueprint
+MRUItem0=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
+MRUItem1=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem3=/Game/Sprites/treeline_bush1
+MRUItem4=/Game/Sprites/bridge_rope_frayed
+MRUItem5=/Game/Sprites/SourceTextures/bridge_rope_frayed
+MRUItem6=/Game/Sprites/bridge_rope
+MRUItem7=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
+MRUItem8=/Game/Sprites/AbilityUpgrades/ice-upgrade
+MRUItem9=/Game/Sprites/SourceTextures/ice-upgrade_1
+MRUItem10=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
+MRUItem11=/Game/ThirdPersonBP/Blueprints/FlyProjectile
+MRUItem12=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
+MRUItem13=/Game/Sprites/AbilityUpgrades/sky-upgrade
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem15=/Game/Sprites/FoliageActors/treeline_bush2_Blueprint
+MRUItem16=/Game/Sprites/FoliageActors/treeline_bush1_Blueprint
+MRUItem17=/Game/Sprites/FoliageActors/rock4_Blueprint
+MRUItem18=/Game/Sprites/FoliageActors/rock3_Blueprint
+MRUItem19=/Game/Sprites/FoliageActors/rock2_Blueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -3006,7 +3013,7 @@ None=======
 /Game/TreeLeaves.TreeLeaves=0
 /Game/Sprites/FoliageActors/BarrierTree.BarrierTree=1
 /Game/Sprites/FoliageActors/BarrierTree_Foliage.BarrierTree_Foliage=1
-/Game/ThirdPersonBP/Blueprints/RobotFly.RobotFly=1
+/Game/ThirdPersonBP/Blueprints/RobotFly.RobotFly=0
 /Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=0
 /Game/Sprites/fly_1.fly_1=0
 /Game/Sprites/fly_0.fly_0=0
@@ -3110,6 +3117,7 @@ None=======
 /Game/Sprites/bridge_rope.bridge_rope=1
 /Game/Sprites/SourceTextures/bridge_rope_frayed.bridge_rope_frayed=1
 /Game/Sprites/bridge_rope_frayed.bridge_rope_frayed=1
+/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3148,6 +3156,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone;
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Crane.Crane;
 RecentlyPlaced=/Game/Sprites/treeline_small1.treeline_small1;
 RecentlyPlaced=/Game/Sprites/treeline_large3.treeline_large3;
 RecentlyPlaced=/Game/Sprites/treeline_large1.treeline_large1;
@@ -3166,8 +3176,6 @@ RecentlyPlaced=/Game/Sprites/bridge_plank.bridge_plank;
 RecentlyPlaced=/Game/Sprites/leafpile1.leafpile1;
 RecentlyPlaced=/Game/Sprites/leafpile2.leafpile2;
 RecentlyPlaced=/Game/Sprites/rock4.rock4;
-RecentlyPlaced=/Game/Sprites/rock3.rock3;
-RecentlyPlaced=/Game/Sprites/rock2.rock2;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -3214,7 +3222,7 @@ MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 PaperSpriteComponent=
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 grass_clump_2_Sprite_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush4_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3269,7 +3277,7 @@ ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimi
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 PaperFlipbookComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 FlyProjectile_C=
-SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 ChildActorComponent="\"Object.Tags.ComponentTags\" "
 Landscape="\"Object.Landscape.LandscapeMaterialsOverride\" "
